k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ajti-landing
  namespace: apps
spec:
  selector:
    app: ajti-landing
  ports:
    - name: http
      port: 80
      targetPort: http
