k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ajti-landing
  namespace: apps
spec:
  ingressClassName: traefik
  rules:
    - host: ajti.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ajti-landing
                port:
                  name: http
    - host: www.ajti.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ajti-landing
                port:
                  name: http
